handle rogue atch size debug

--- a/notebooks/DatasetsExploration.ipynb
+++ b/notebooks/DatasetsExploration.ipynb
@@ -1386,7 +1386,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "1814e98a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1402,6 +1404,456 @@
    "source": [
     "cat_cols = df.select_dtypes(include=[\"object\", \"category\"]).columns\n",
     "cat_cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ce87ca0-794a-44f7-901a-1d765b349699",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8740ba9-38a3-4ee8-99ea-7bb5e809e6a5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "097e34e0-b4a6-470e-9e5d-bf78d996b9ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "3661"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "24da07a3-8960-46f5-9986-9f15995934df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "c4575e9a-65e2-4074-b9ef-09de897a396a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def handle_rogue_batch_size(train, val, batch_size):\n",
+    "    num_rows_to_adjust = 1\n",
+    "    if len(train) % batch_size != 1 and  len(val) % batch_size != 1:\n",
+    "        return train, val\n",
+    "    else:\n",
+    "        num_rows_to_adjust = 0\n",
+    "        for i in range(100):\n",
+    "            print(i)\n",
+    "            if len(train) % batch_size == 1:\n",
+    "                num_rows_to_adjust += 1\n",
+    "                removed_rows = train.iloc[-num_rows_to_adjust:]  # Select rows as a DataFrame\n",
+    "                train = train.iloc[:-num_rows_to_adjust]\n",
+    "                val = pd.concat([val, removed_rows], axis=0)\n",
+    "                print(\"train c1\", train.shape, val.shape)\n",
+    "                \n",
+    "            if len(val) % batch_size == 1:\n",
+    "                num_rows_to_adjust += 1\n",
+    "                removed_rows = val.iloc[-num_rows_to_adjust:]  # Select rows as a DataFrame\n",
+    "                val = val.iloc[:-num_rows_to_adjust]\n",
+    "                train = pd.concat([train, removed_rows], axis=0)\n",
+    "                print(\"val c1\", train.shape, val.shape)\n",
+    "                \n",
+    "            if (len(train) % batch_size != 1) and  (len(val) % batch_size != 1):\n",
+    "                break\n",
+    "        return train, val\n",
+    "        \n",
+    "\n",
+    "# Rest of the code remains the same as in previous responses\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "aec0aa23-95b2-4c3d-89f0-d365f8b78435",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "train c1 (3662, 15) (3663, 15)\n",
+      "val c1 (3664, 15) (3661, 15)\n",
+      "Train and val shapes (3664, 15) (3661, 15) batch size 1831\n",
+      "\n",
+      "Train dataset:\n",
+      "(3664, 15)\n",
+      "\n",
+      "Validation dataset:\n",
+      "(3661, 15)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create random seed for reproducibility\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# Dataset specifications\n",
+    "train_rows = 3663\n",
+    "val_rows = 3662\n",
+    "num_features = 15\n",
+    "batch_size = 1831\n",
+    "\n",
+    "# Create random data\n",
+    "train_data = np.random.random((train_rows, num_features))\n",
+    "val_data = np.random.random((val_rows, num_features))\n",
+    "\n",
+    "# Create DataFrames for train and validation datasets\n",
+    "train_df = pd.DataFrame(train_data)\n",
+    "val_df = pd.DataFrame(val_data)\n",
+    "# Ensure the train and validation lengths meet the rogue batch size condition\n",
+    "train_df, val_df = handle_rogue_batch_size(train_df, val_df, batch_size)\n",
+    "\n",
+    "# Print train and val shapes\n",
+    "print(\"Train and val shapes\", train_df.shape, val_df.shape, \"batch size\", batch_size)\n",
+    "\n",
+    "# Display first few rows of train and val datasets\n",
+    "print(\"\\nTrain dataset:\")\n",
+    "print(train_df.shape)\n",
+    "\n",
+    "print(\"\\nValidation dataset:\")\n",
+    "print(val_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "d372c7d8-3d94-4376-8cb7-8e725eae5fed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "      <th>13</th>\n",
+       "      <th>14</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.374540</td>\n",
+       "      <td>0.950714</td>\n",
+       "      <td>0.731994</td>\n",
+       "      <td>0.598658</td>\n",
+       "      <td>0.156019</td>\n",
+       "      <td>0.155995</td>\n",
+       "      <td>0.058084</td>\n",
+       "      <td>0.866176</td>\n",
+       "      <td>0.601115</td>\n",
+       "      <td>0.708073</td>\n",
+       "      <td>0.020584</td>\n",
+       "      <td>0.969910</td>\n",
+       "      <td>0.832443</td>\n",
+       "      <td>0.212339</td>\n",
+       "      <td>0.181825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.183405</td>\n",
+       "      <td>0.304242</td>\n",
+       "      <td>0.524756</td>\n",
+       "      <td>0.431945</td>\n",
+       "      <td>0.291229</td>\n",
+       "      <td>0.611853</td>\n",
+       "      <td>0.139494</td>\n",
+       "      <td>0.292145</td>\n",
+       "      <td>0.366362</td>\n",
+       "      <td>0.456070</td>\n",
+       "      <td>0.785176</td>\n",
+       "      <td>0.199674</td>\n",
+       "      <td>0.514234</td>\n",
+       "      <td>0.592415</td>\n",
+       "      <td>0.046450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.607545</td>\n",
+       "      <td>0.170524</td>\n",
+       "      <td>0.065052</td>\n",
+       "      <td>0.948886</td>\n",
+       "      <td>0.965632</td>\n",
+       "      <td>0.808397</td>\n",
+       "      <td>0.304614</td>\n",
+       "      <td>0.097672</td>\n",
+       "      <td>0.684233</td>\n",
+       "      <td>0.440152</td>\n",
+       "      <td>0.122038</td>\n",
+       "      <td>0.495177</td>\n",
+       "      <td>0.034389</td>\n",
+       "      <td>0.909320</td>\n",
+       "      <td>0.258780</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.662522</td>\n",
+       "      <td>0.311711</td>\n",
+       "      <td>0.520068</td>\n",
+       "      <td>0.546710</td>\n",
+       "      <td>0.184854</td>\n",
+       "      <td>0.969585</td>\n",
+       "      <td>0.775133</td>\n",
+       "      <td>0.939499</td>\n",
+       "      <td>0.894827</td>\n",
+       "      <td>0.597900</td>\n",
+       "      <td>0.921874</td>\n",
+       "      <td>0.088493</td>\n",
+       "      <td>0.195983</td>\n",
+       "      <td>0.045227</td>\n",
+       "      <td>0.325330</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.388677</td>\n",
+       "      <td>0.271349</td>\n",
+       "      <td>0.828738</td>\n",
+       "      <td>0.356753</td>\n",
+       "      <td>0.280935</td>\n",
+       "      <td>0.542696</td>\n",
+       "      <td>0.140924</td>\n",
+       "      <td>0.802197</td>\n",
+       "      <td>0.074551</td>\n",
+       "      <td>0.986887</td>\n",
+       "      <td>0.772245</td>\n",
+       "      <td>0.198716</td>\n",
+       "      <td>0.005522</td>\n",
+       "      <td>0.815461</td>\n",
+       "      <td>0.706857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3636</th>\n",
+       "      <td>0.813152</td>\n",
+       "      <td>0.969383</td>\n",
+       "      <td>0.964133</td>\n",
+       "      <td>0.299185</td>\n",
+       "      <td>0.828774</td>\n",
+       "      <td>0.678777</td>\n",
+       "      <td>0.800076</td>\n",
+       "      <td>0.846238</td>\n",
+       "      <td>0.980279</td>\n",
+       "      <td>0.151730</td>\n",
+       "      <td>0.769746</td>\n",
+       "      <td>0.734154</td>\n",
+       "      <td>0.287736</td>\n",
+       "      <td>0.392588</td>\n",
+       "      <td>0.176758</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3637</th>\n",
+       "      <td>0.913273</td>\n",
+       "      <td>0.879336</td>\n",
+       "      <td>0.614035</td>\n",
+       "      <td>0.511630</td>\n",
+       "      <td>0.232888</td>\n",
+       "      <td>0.789604</td>\n",
+       "      <td>0.008205</td>\n",
+       "      <td>0.462787</td>\n",
+       "      <td>0.860551</td>\n",
+       "      <td>0.618485</td>\n",
+       "      <td>0.635123</td>\n",
+       "      <td>0.070707</td>\n",
+       "      <td>0.286705</td>\n",
+       "      <td>0.673862</td>\n",
+       "      <td>0.049617</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3638</th>\n",
+       "      <td>0.330936</td>\n",
+       "      <td>0.353945</td>\n",
+       "      <td>0.498718</td>\n",
+       "      <td>0.362375</td>\n",
+       "      <td>0.454118</td>\n",
+       "      <td>0.546997</td>\n",
+       "      <td>0.128348</td>\n",
+       "      <td>0.180475</td>\n",
+       "      <td>0.832511</td>\n",
+       "      <td>0.459768</td>\n",
+       "      <td>0.355152</td>\n",
+       "      <td>0.433882</td>\n",
+       "      <td>0.174819</td>\n",
+       "      <td>0.239847</td>\n",
+       "      <td>0.515524</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3639</th>\n",
+       "      <td>0.358926</td>\n",
+       "      <td>0.475456</td>\n",
+       "      <td>0.149705</td>\n",
+       "      <td>0.156468</td>\n",
+       "      <td>0.383943</td>\n",
+       "      <td>0.378858</td>\n",
+       "      <td>0.883332</td>\n",
+       "      <td>0.033451</td>\n",
+       "      <td>0.992855</td>\n",
+       "      <td>0.956523</td>\n",
+       "      <td>0.542251</td>\n",
+       "      <td>0.718758</td>\n",
+       "      <td>0.935255</td>\n",
+       "      <td>0.251194</td>\n",
+       "      <td>0.315631</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3640</th>\n",
+       "      <td>0.110925</td>\n",
+       "      <td>0.563846</td>\n",
+       "      <td>0.159448</td>\n",
+       "      <td>0.930871</td>\n",
+       "      <td>0.431567</td>\n",
+       "      <td>0.919687</td>\n",
+       "      <td>0.205100</td>\n",
+       "      <td>0.694036</td>\n",
+       "      <td>0.647592</td>\n",
+       "      <td>0.399676</td>\n",
+       "      <td>0.898343</td>\n",
+       "      <td>0.434802</td>\n",
+       "      <td>0.198431</td>\n",
+       "      <td>0.976985</td>\n",
+       "      <td>0.441481</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3641 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            0         1         2         3         4         5         6   \\\n",
+       "0     0.374540  0.950714  0.731994  0.598658  0.156019  0.155995  0.058084   \n",
+       "1     0.183405  0.304242  0.524756  0.431945  0.291229  0.611853  0.139494   \n",
+       "2     0.607545  0.170524  0.065052  0.948886  0.965632  0.808397  0.304614   \n",
+       "3     0.662522  0.311711  0.520068  0.546710  0.184854  0.969585  0.775133   \n",
+       "4     0.388677  0.271349  0.828738  0.356753  0.280935  0.542696  0.140924   \n",
+       "...        ...       ...       ...       ...       ...       ...       ...   \n",
+       "3636  0.813152  0.969383  0.964133  0.299185  0.828774  0.678777  0.800076   \n",
+       "3637  0.913273  0.879336  0.614035  0.511630  0.232888  0.789604  0.008205   \n",
+       "3638  0.330936  0.353945  0.498718  0.362375  0.454118  0.546997  0.128348   \n",
+       "3639  0.358926  0.475456  0.149705  0.156468  0.383943  0.378858  0.883332   \n",
+       "3640  0.110925  0.563846  0.159448  0.930871  0.431567  0.919687  0.205100   \n",
+       "\n",
+       "            7         8         9         10        11        12        13  \\\n",
+       "0     0.866176  0.601115  0.708073  0.020584  0.969910  0.832443  0.212339   \n",
+       "1     0.292145  0.366362  0.456070  0.785176  0.199674  0.514234  0.592415   \n",
+       "2     0.097672  0.684233  0.440152  0.122038  0.495177  0.034389  0.909320   \n",
+       "3     0.939499  0.894827  0.597900  0.921874  0.088493  0.195983  0.045227   \n",
+       "4     0.802197  0.074551  0.986887  0.772245  0.198716  0.005522  0.815461   \n",
+       "...        ...       ...       ...       ...       ...       ...       ...   \n",
+       "3636  0.846238  0.980279  0.151730  0.769746  0.734154  0.287736  0.392588   \n",
+       "3637  0.462787  0.860551  0.618485  0.635123  0.070707  0.286705  0.673862   \n",
+       "3638  0.180475  0.832511  0.459768  0.355152  0.433882  0.174819  0.239847   \n",
+       "3639  0.033451  0.992855  0.956523  0.542251  0.718758  0.935255  0.251194   \n",
+       "3640  0.694036  0.647592  0.399676  0.898343  0.434802  0.198431  0.976985   \n",
+       "\n",
+       "            14  \n",
+       "0     0.181825  \n",
+       "1     0.046450  \n",
+       "2     0.258780  \n",
+       "3     0.325330  \n",
+       "4     0.706857  \n",
+       "...        ...  \n",
+       "3636  0.176758  \n",
+       "3637  0.049617  \n",
+       "3638  0.515524  \n",
+       "3639  0.315631  \n",
+       "3640  0.441481  \n",
+       "\n",
+       "[3641 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df[:-20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1d7ce36d-2c0a-476a-9297-5572ccfb78d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "772"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "757+15"
    ]
   },
   {
