fix hyperopt method after batch size debug

--- a/notebooks/DatasetsExploration.ipynb
+++ b/notebooks/DatasetsExploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "61d7a5af",
    "metadata": {},
    "outputs": [],
@@ -17,42 +17,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "053a8757-7328-4c8f-aa6e-d8070dcca122",
+   "execution_count": 4,
+   "id": "88915d03-4f42-47a9-8b8b-c3a188862277",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "numpy.float64"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "type(y_train.iloc[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "f350f4da-3e7f-42ef-936d-6c3f3e4796bb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "if isinstance(y_train.iloc[0], float):\n",
-    "    print(1)"
+    "data_loader = create_data_loader(\"housing\", test_size=0.2, normalize_features=\"mean_std\", return_extra_info=True, encode_categorical=False)\n",
+    "X_train, X_test, y_train, y_test, extra_info = data_loader.load_data()"
    ]
   },
   {
